<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		profile
	 *	@date 		Monday 25th of March 2024 03:32:54 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/profile" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_profile_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__profile_ek2"
					android:background="@drawable/_bg__profile_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="800dp" />


				<RelativeLayout android:id="@+id/information"
					android:layout_marginTop="238dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__information_ek1"
						android:background="@drawable/_bg__information_ek1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="375dp"
						android:layout_height="332dp" />


					<RelativeLayout android:id="@+id/name"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__name_ek1"
							android:background="@drawable/_bg__name_ek1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="375dp"
							android:layout_height="48dp" />

						<TextView android:id="@+id/name_ek2"
							android:textSize="14sp"
							android:textColor="@color/_bg__information_ek1_color"
							android:layout_marginLeft="16dp"
							android:layout_marginTop="14dp"
							android:layout_width="113.4dp"
							android:layout_height="24.4dp"
							android:text="@string/name_ek2_string"
							 />


						<RelativeLayout android:id="@+id/info"
							android:layout_marginTop="14dp"
							android:layout_marginStart="128dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View   android:id="@+id/_bg__info_ek1"
								android:background="@drawable/_bg__info_ek1_shape"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="231dp"
								android:layout_height="20dp" />

							<TextView android:id="@+id/__ng_ho_ng_l_m"
								android:textSize="14sp"
								android:textColor="@color/_bg__information_ek1_color"
								android:layout_marginLeft="20dp"
								android:layout_marginTop="0dp"
								android:layout_width="224.4dp"
								android:layout_height="24.4dp"
								android:text="@string/__ng_ho_ng_l_m_string"
								 />

						</RelativeLayout>

					</RelativeLayout>


					<RelativeLayout android:id="@+id/username"
						android:layout_marginTop="48dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__username_ek1"
							android:background="@drawable/_bg__username_ek1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="375dp"
							android:layout_height="48dp" />

						<TextView android:id="@+id/username_ek2"
							android:textSize="14sp"
							android:textColor="@color/_bg__information_ek1_color"
							android:layout_marginLeft="16dp"
							android:layout_marginTop="14dp"
							android:layout_width="113.4dp"
							android:layout_height="24.4dp"
							android:text="@string/username_ek2_string"
							 />


						<RelativeLayout android:id="@+id/info_ek2"
							android:layout_marginTop="14dp"
							android:layout_marginStart="128dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View   android:id="@+id/_bg__info_ek3"
								android:background="@drawable/_bg__info_ek3_shape"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="231dp"
								android:layout_height="20dp" />

							<TextView android:id="@+id/__hoanglam"
								android:textSize="14sp"
								android:textColor="@color/_bg__information_ek1_color"
								android:layout_marginLeft="20dp"
								android:layout_marginTop="0dp"
								android:layout_width="224.4dp"
								android:layout_height="24.4dp"
								android:text="@string/__hoanglam_string"
								 />

						</RelativeLayout>

					</RelativeLayout>


					<RelativeLayout android:id="@+id/email"
						android:layout_marginTop="96dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__email_ek1"
							android:background="@drawable/_bg__email_ek1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="375dp"
							android:layout_height="48dp" />

						<TextView android:id="@+id/email_ek2"
							android:textSize="14sp"
							android:textColor="@color/_bg__information_ek1_color"
							android:layout_marginLeft="16dp"
							android:layout_marginTop="14dp"
							android:layout_width="113.4dp"
							android:layout_height="24.4dp"
							android:text="@string/email_ek2_string"
							 />


						<RelativeLayout android:id="@+id/info_ek4"
							android:layout_marginTop="14dp"
							android:layout_marginStart="128dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View   android:id="@+id/_bg__info_ek5"
								android:background="@drawable/_bg__info_ek5_shape"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="231dp"
								android:layout_height="20dp" />

							<TextView android:id="@+id/lam_dh_63cntt_ntu_edu_vn"
								android:textSize="14sp"
								android:textColor="@color/_bg__information_ek1_color"
								android:layout_marginLeft="20dp"
								android:layout_marginTop="0dp"
								android:layout_width="224.4dp"
								android:layout_height="24.4dp"
								android:text="@string/lam_dh_63cntt_ntu_edu_vn_string"
								 />

						</RelativeLayout>

					</RelativeLayout>


					<RelativeLayout android:id="@+id/links"
						android:layout_marginTop="144dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__links_ek1"
							android:background="@drawable/_bg__links_ek1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="375dp"
							android:layout_height="80dp" />

						<TextView android:id="@+id/links_ek2"
							android:textSize="14sp"
							android:textColor="@color/_bg__information_ek1_color"
							android:layout_marginLeft="16dp"
							android:layout_marginTop="14dp"
							android:layout_width="113.4dp"
							android:layout_height="24.4dp"
							android:text="@string/links_ek2_string"
							 />


						<RelativeLayout android:id="@+id/urls"
							android:layout_marginTop="14dp"
							android:layout_marginStart="128dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View   android:id="@+id/_bg__urls_ek1"
								android:background="@drawable/_bg__urls_ek1_shape"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="231dp"
								android:layout_height="52dp" />

							<TextView android:id="@+id/facebook"
								android:textSize="14sp"
								android:textColor="@color/_bg__information_ek1_color"
								android:layout_marginLeft="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="244.4dp"
								android:layout_height="24.4dp"
								android:text="@string/facebook_string"
								 />

							<TextView android:id="@+id/hoang_lam_dang___youtube"
								android:textSize="14sp"
								android:textColor="@color/_bg__information_ek1_color"
								android:layout_marginLeft="0dp"
								android:layout_marginTop="32dp"
								android:layout_width="244.4dp"
								android:layout_height="24.4dp"
								android:text="@string/hoang_lam_dang___youtube_string"
								 />

						</RelativeLayout>

					</RelativeLayout>


					<RelativeLayout android:id="@+id/bio"
						android:layout_marginTop="224dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/_bg__bio_ek1"
							android:background="@drawable/_bg__bio_ek1_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="375dp"
							android:layout_height="108dp" />

						<TextView android:id="@+id/bio_ek2"
							android:textSize="14sp"
							android:textColor="@color/_bg__information_ek1_color"
							android:layout_marginLeft="16dp"
							android:layout_marginTop="14dp"
							android:layout_width="113.4dp"
							android:layout_height="24.4dp"
							android:text="@string/bio_ek2_string"
							 />


						<RelativeLayout android:id="@+id/info_ek6"
							android:layout_marginTop="14dp"
							android:layout_marginStart="128dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View   android:id="@+id/_bg__info_ek7"
								android:background="@drawable/_bg__info_ek7_shape"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="231dp"
								android:layout_height="80dp" />

							<TextView android:id="@+id/sinh_vi_n_ng_nh_c_ng_ngh__th_ng_tin_n_m_3_hi_n__ang_theo_h_c_t_i_tr__ng___i_h_c_nha_trang__mssv__63134410"
								android:textSize="14sp"
								android:textColor="@color/_bg__information_ek1_color"
								android:layout_marginLeft="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="224.4dp"
								android:layout_height="84.4dp"
								android:text="@string/sinh_vi_n_ng_nh_c_ng_ngh__th_ng_tin_n_m_3_hi_n__ang_theo_h_c_t_i_tr__ng___i_h_c_nha_trang__mssv__63134410_string"
								 />

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>

				<ImageView android:id="@+id/header"
					android:src="@drawable/header"
					android:contentDescription="header"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="44dp"
					android:layout_width="360dp"
					android:layout_height="42dp" />

				<ImageView android:id="@+id/vector_1"
					android:src="@drawable/vector_1"
					android:contentDescription="vector_1"
					 android:layout_marginStart="-1dp"
					android:layout_marginTop="-1dp"
					android:layout_width="360dp"
					android:layout_height="286.5dp" />

				<ImageView android:id="@+id/ellipse_1"
					android:src="@drawable/face"
					android:contentDescription="ellipse_1"
					 android:layout_marginStart="135dp"
					android:layout_marginTop="115dp"
					android:layout_width="99dp"
					android:layout_height="96dp" />

				<ImageView android:id="@+id/vector_3"
					android:src="@drawable/vector_3"
					android:contentDescription="vector_3"
					 android:layout_marginStart="-1dp"
					android:layout_marginTop="565dp"
					android:layout_width="360dp"
					android:layout_height="234.5dp" />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>